--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "chinese-lunar": "^0.1.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
