--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.7",
     "chinese-lunar": "^0.1.4",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.1",
+    "leaflet": "^1.9.4",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
