--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.7",
     "chinese-lunar": "^0.1.4",
+    "chinese-lunar-calendar": "^1.0.1",
     "core-js": "^3.8.3",
     "echarts": "^5.5.1",
     "leaflet": "^1.9.4",
+    "lunar-calendar": "^0.1.4",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.2",
     "vue-echarts": "^7.0.3",
