--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chinese-lunar-calendar": "^1.0.1",
     "core-js": "^3.8.3",
     "echarts": "^5.5.1",
+    "element-plus": "^2.9.7",
     "leaflet": "^1.9.4",
     "lunar-calendar": "^0.1.4",
     "vue": "^3.2.13",
@@ -31,7 +32,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.2.2",
+    "less-loader": "^12.2.0"
   },
   "eslintConfig": {
     "root": true,
